Fix TEM power type alignment

--- a/src/modules/tem-crowns/styles.css
+++ b/src/modules/tem-crowns/styles.css
@@ -65,7 +65,7 @@ span.mh-ui-tem-crown-text {
 }
 
 .campPage-trap-trapEffectiveness-mouse-powerType {
-  right: 27px;
+  right: 25px;
   bottom: -10px;
   background-size: 70%;
 }
